--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,7 +5,7 @@
 html, body {
   width: 100%;
   height: 100%;
-  background-color: #b1b1b1;
+  background-color: #e0e0e0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
