--- a/src/css/Game.css
+++ b/src/css/Game.css
@@ -1,4 +1,5 @@
 .board {
+  font-family: 'Roboto', sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,7 +26,8 @@
 .cell {
   width: 24px;
   height: 24px;
-  background-image:linear-gradient(to bottom, #FFFFFF,#E4E4E4);
+  /* background-image:linear-gradient(to bottom, #FFFFFF,#E4E4E4); */
+  background-color: white;
   margin-right:0.5px;
   margin-left:0.5px;
   display:inline-block;
