--- a/src/css/Signin.css
+++ b/src/css/Signin.css
@@ -1,4 +1,5 @@
 .login-container {
+  font-family: 'Roboto', sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -7,12 +8,65 @@
   border: 2px solid yellow;
 }
 
-.login{
-  border: 2px solid darkorange;
-  width: 750px;
-  height:500px;
+.login-wrapper{
+  padding: 20px;
+  background-color: white;
+  border-radius: 12px;
+  width: 378px;
+  height: 423px;
+  box-shadow: 5px 5px 16px -2px rgb(175, 175, 175);
+  text-align: center;
+  position: relative;
 }
 
-.login input{
-  
+.login-forgot {
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.login-forgot a{
+  color:#aaaaaa;
+  text-decoration: none;
+  font-size: 12px;
+}
+
+input[type='text'],
+input[type='password'] {
+  width:313px;
+  background-image:linear-gradient(to bottom, #EEEEEE,#EFEFEF);
+  border-radius: 9px;
+  height:38px;
+  border:none;
+  padding: .8em .9em;
+}
+
+input[type='submit']{
+  background-color: #1033e3;
+  display:block;
+  box-shadow: 5px 5px 16px -2px rgb(175, 175, 175);
+  width:313px;
+  height:38px;
+  font-size: 15px;
+  border-radius: 9px;
+  border: none;
+  color:white;
+  margin: 0 auto;
+  margin-top: 40px;
+}
+
+input[type='submit']:hover{
+  background: linear-gradient(70deg,#1033e3, #f74bf7);
+}
+
+
+.btn-reset {
+  border-radius: 50%;
+  color: black;
+  border: none;
+  padding: 1px 5px;
+}
+
+.btn-reset::before{
+  content: 'X'
 }
