--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,11 +2,17 @@
   box-sizing: border-box;
 }
 
+:root{
+  --main-theme-color:#1033e3;
+  --main-font-color:#504e5a;
+}
+
 html, body {
   width: 100%;
   height: 100%;
   background-color: #e0e0e0;
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
