[add] 경로 컨벤션 정리 및 로그인 관련 쿠키 구현

--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -10,48 +10,37 @@
   min-width: 294px;
 }
 
-
 .game-container-row{
   margin-bottom: 0px;
   height:25px;
 }
 
-
 .cell {
   width: 24px;
   height: 24px;
-  /* background-image:linear-gradient(to bottom, #FFFFFF,#E4E4E4); */
+  background-image:linear-gradient(to bottom, #FFFFFF,#E4E4E4);
   background-color: white;
-  margin-right:0.5px;
-  margin-left:0.5px;
+  margin: 0px 0.5px;
   display:inline-block;
   border-radius: 2px;
   position: relative;
 }
 
-
-.cell div{
+.cell .cell-text{
   position: absolute;
   background-image:linear-gradient(to bottom, #FFFFFF,#E4E4E4);
-  text-align: center;
-  display: inline;
-  font-weight: bold;
-  font-size: 12px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-
 .cell:hover{
   background-image:linear-gradient(to bottom, #dee6fc, #ffffff);
 }
 
-
 .cell:active{
   background-image: linear-gradient(to bottom, #D4F4FA,#BDBDBD);
 }
-
 
 .lock {
   width: 24px;
@@ -63,7 +52,6 @@
   border-radius: 2px;
   position: relative;
 }
-
 
 .lock div{
   position: absolute;
