[fix]리팩토링 및 게시판 조회 구현 중

--- a/src/styles/Ranking.css
+++ b/src/styles/Ranking.css
@@ -37,10 +37,12 @@
   display: flex;
   position: relative;
   background-color: white;
+  min-width: 384px;
   margin : 9px 0;
   height: 2.4rem;
   width: 100%;
   border-radius: 7px;
+  box-shadow: 5px 5px 16px -2px rgb(175, 175, 175);
 }
 
 .rank-wrapper .rank-header {
