--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -30,6 +30,7 @@
 }
 
 
+.signup-wrapper
 input[type='text'],
 input[type='password'] {
   width:313px;
@@ -50,7 +51,7 @@ input[type='password'] {
   padding: 2px 5px;
 }
 
-
+.signup-wrapper
 input[type='submit']{
   background-color: #1033e3;
   display:block;
@@ -62,22 +63,19 @@ input[type='submit']{
   font-family: 'Roboto', sans-serif;
   border: none;
   color:white;
-  margin: 0 auto;
-  margin-top: 40px;
+  margin: 1.7rem auto;
 }
 
-
+.signup-wrapper
 input[type='submit']:hover{
   background: linear-gradient(70deg,#1033e3, #f74bf7);
 }
-
 
 .btn-reset {
   position: absolute;
   top:10px;
   right: 24px;
 }
-
 
 .btn-reset::before,
 .btn-remove::before {
