--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,6 @@
 *, *::before, *::after {
   box-sizing: border-box;
+  font-family: 'Noto Sans KR', sans-serif;
   padding: 0;
   margin:0;
 }
@@ -30,5 +31,8 @@ code {
 #root{
   height: 100%;
   width: 100%;
-  font-family: 'Noto Sans KR', sans-serif;
+}
+
+a{
+  text-decoration: none;
 }
